--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,20 +1,18 @@
-.todo-list {
-    margin: 0 auto;
-    margin-top: 75px;
-  }
-  
-  input.new-item:focus {
-    outline: none;
-  }
-  
-  .list-group-item > button.delete,
-  .list-group-item > button.complete {
-    float: right;
-    height: 25px;
-    margin-left: 5px;
-  }
-  
-  .edit {
-    width: 100%;
-  }
-  
+.burger-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.fresh-burgers {
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 10px;
+  width: 50%;
+}
+
+.eaten-burgers {
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 10px;
+  width: 50%;
+}
